// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo esv variable describe "frodo esv variable describe --json --usage --variable-id esv-test-var-pi --directory test/e2e/exports/all-separate/cloud": should describe the esv variable "esv-test-var-pi" with usage from directory test/e2e/exports/all-separate/cloud and json output 1`] = `
"{
  _id: 'esv-test-var-pi',
  description: 'This is another test variable.',
  expressionType: 'number',
  lastChangeDate: '2024-07-12T17:40:41.283412Z',
  lastChangedBy: 'Frodo-SA-1720799681233',
  loaded: true,
  value: '3.1415926',
  locations: [
    "realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script.0",
    "realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script.4"
  ]
}
"
`;

exports[`frodo esv variable describe "frodo esv variable describe --json --usage --variable-id esv-test-var-pi --file test/e2e/exports/all/all.cloud.json": should describe the esv variable "esv-test-var-pi" with usage from file test/e2e/exports/all/all.cloud.json and json output 1`] = `
"{
  _id: 'esv-test-var-pi',
  description: 'This is another test variable.',
  expressionType: 'number',
  lastChangeDate: '2024-07-12T17:40:41.283412Z',
  lastChangedBy: 'Frodo-SA-1720799681233',
  loaded: true,
  value: '3.1415926',
  locations: [
    "realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script"
  ]
}
"
`;

exports[`frodo esv variable describe "frodo esv variable describe -i esv-neo-age": should describe the esv variable "esv-neo-age" 1`] = `
"Name         │esv-neo-age                         
Value        │28                                  
Type         │int                                 
Status       │loaded                              
Description  │Neo's age in the matrix.            
Modified     │7/18/2023, 10:21:23 PM              
Modifier UUID│b672336b-41ef-428d-ae4a-e0c082875377
"
`;

exports[`frodo esv variable describe "frodo esv variable describe -ui esv-test-var-pi -D test/e2e/exports/all-separate/cloud": should describe the esv variable "esv-test-var-pi" with usage from directory test/e2e/exports/all-separate/cloud 1`] = `
"Name                     │esv-test-var-pi                                                                                                      
Value                    │3.1415926                                                                                                            
Type                     │number                                                                                                               
Status                   │loaded                                                                                                               
Description              │This is another test variable.                                                                                       
Modified                 │7/12/2024, 5:40:41 PM                                                                                                
Modifier UUID            │Frodo-SA-1720799681233                                                                                               
Usage Locations (2 total)│realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script.0
                         │realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script.4
"
`;

exports[`frodo esv variable describe "frodo esv variable describe -ui esv-test-var-pi -f test/e2e/exports/all/all.cloud.json": should describe the esv variable "esv-test-var-pi" with usage from file test/e2e/exports/all/all.cloud.json 1`] = `
"Name                     │esv-test-var-pi                                                                                                    
Value                    │3.1415926                                                                                                          
Type                     │number                                                                                                             
Status                   │loaded                                                                                                             
Description              │This is another test variable.                                                                                     
Modified                 │7/12/2024, 5:40:41 PM                                                                                              
Modifier UUID            │Frodo-SA-1720799681233                                                                                             
Usage Locations (1 total)│realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script
"
`;

exports[`frodo esv variable describe "frodo esv variable describe -ui esv-test-var-pi": should describe the esv variable "esv-test-var-pi" with usage 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1720799681233 [b672336b-41ef-428d-ae4a-e0c082875377]
• Exported 22 am config entities.
• 13 mappings exported.
• Exported 17 email templates.
Error exporting idm config entity fidc/federation-EntraID
  Error reading config entity fidc/federation-EntraID
    Network error:
      URL: https://openam-frodo-dev.forgeblocks.com/openidm/config/fidc/federation-EntraID
      Status: 403
      Code: ERR_BAD_REQUEST
      Reason: Forbidden
      Message: Access denied
✔ Exported 69 config entities.
• Exported 7 internal roles
• Exported 7 custom nodes.
• Exported 2 realms.
• Exported 22 scriptTypes.
• Exported 13 secrets.
• Exported 2 global services.
• Exported 12 variables.
• Exported 2 alpha realm SAML2 providers.
• Exported 3 alpha realm circles of trust.
• Exported 3 alpha realm agent groups.
• Exported 11 alpha realm agents.
• Exported 17 alpha realm OAuth2 clients.
• 7 alpha realm providers exported.
• Exported 21 alpha realm journeys.
• Exported 3 alpha realm applications
• Exported 6 alpha realm policies.
• Exported 5 alpha realm policy sets.
• Exported 8 alpha realm resource types.
• Exported alpha realm 67 scripts.
• Exported 1 secret stores.
• Exported 10 alpha realm services.
• Exported 7 alpha realm themes.
• Exported 0 bravo realm SAML2 providers.
• Exported 0 bravo realm agent groups.
• Exported 0 bravo realm agents.
• Exported 3 bravo realm OAuth2 clients.
• 0 bravo realm providers exported.
• Exported 10 bravo realm journeys.
• Exported 0 bravo realm applications
• Exported 0 bravo realm policies.
• Exported 1 bravo realm policy sets.
• Exported 2 bravo realm resource types.
• Exported bravo realm 60 scripts.
• Exported 1 secret stores.
• Exported 9 bravo realm services.
• Exported 5 bravo realm themes.
"
`;

exports[`frodo esv variable describe "frodo esv variable describe -ui esv-test-var-pi": should describe the esv variable "esv-test-var-pi" with usage 2`] = `
"Name                     │esv-test-var-pi                                                                                                      
Value                    │3.1415926                                                                                                            
Type                     │number                                                                                                               
Status                   │loaded                                                                                                               
Description              │This is another test variable.                                                                                       
Modified                 │7/12/2024, 5:40:41 PM                                                                                                
Modifier UUID            │Frodo-SA-1720799681233                                                                                               
Usage Locations (2 total)│realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script.0
                         │realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script.4
"
`;
